# cdi

./: .todo.md  Cargo.toml  DESIGN.md  flake.nix
cdi-config/: Cargo.toml
cdi-config/src/: lib.rs
cdi-server/: Cargo.toml
cdi-server/src/: lib.rs  process.rs  server.rs  supervisor.rs
cdi-server/src/store/: block.rs  memory.rs  mod.rs
cdi-shared/: Cargo.toml
cdi-shared/src/: lib.rs  log.rs
cdi-shared/src/event/: mod.rs  store.rs  ui.rs
cdi-tui/: Cargo.toml
cdi-tui/src/: app.rs  lib.rs  signals.rs
pom-config/: Cargo.toml
pom-config/src/: lib.rs
pom-server/: Cargo.toml
pom-server/src/: lib.rs  process.rs  server.rs  supervisor.rs  utils.rs
pom-shared/: Cargo.toml
pom-shared/src/: event.rs  lib.rs  ro_cell.rs
pom-tui/: Cargo.toml
pom-tui/src/: app.rs  lib.rs  signals.rs
resources/: .pom.kdl
src/: main.rs
