[workspace]
memebers = ["pom*"]
resolver = "3"

[workspace.dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.38", features = [ "derive" ] }
ratatui = "0.29.0"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = [ "full" ] }
strum = "0.27.1"
knus = "3.3.1"
miette = { version="7.2.0", features=["fancy"] }

[package]
name = "pom"
version = "0.1.0"
edition = "2024"

[dependencies]
pom-tui.path = "./pom-tui"
pom-server.path = "./pom-server"
pom-config.path = "./pom-config/"

anyhow.workspace = true
clap.workspace = true
thiserror.workspace = true
tokio.workspace = true
strum.workspace = true
miette.workspace = true

