[package]
name = "cdi-shared"
version = "0.1.0"
edition = "2024"

[dependencies]
# cdi-server.path = "../cdi-server"

ansi-to-tui.workspace = true
anyhow.workspace = true
clap.workspace = true
crossterm.workspace = true
futures.workspace = true
ratatui.workspace = true
strum.workspace = true
thiserror.workspace = true
tokio.workspace = true
